Fixed overflowing badges

--- a/src/mkdocs_badges/assets/badge.css
+++ b/src/mkdocs_badges/assets/badge.css
@@ -27,7 +27,6 @@ a.badge:hover,
 
 .badge .title, .badge .value {
     display: block;
-    width: max-content;
 }
 
 .badge .title {
